tests/NormalTests/paczka1/fuzzy1/60115867.err
Error in line 4: xoB8pdQ S467 99,3
Error in line 7: HylMbUcU8gU S467 35,6
Error in line 9: HylMbUcU8gU SPP 77,6
Error in line 1: ziJA1qT7 S467 46,0
Error in line 13: HylMbUcU8gU S22 282,9
Error in line 23: 7LqBPK S643 71,4
Error in line 33: gZF4 S467 45,6
